--- a/source/less/page-main.less
+++ b/source/less/page-main.less
@@ -6,7 +6,7 @@
 .page-main__title {
   text-align: center;
   .font(36px; 40px);
-  .font-face-bold;
+  font-family: "Blogger-sans-bold";
   color: @white;
   margin-top:21px;
   margin-right: 41px;
