--- a/source/less/user-list.less
+++ b/source/less/user-list.less
@@ -2,7 +2,7 @@
   list-style: none;
   text-align: center;
   text-transform: uppercase;
-  .font-face(bold);
+  .font-face-bold;
   .font(17px; 30px);
   padding: 0px;
 }
