--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -1,4 +1,4 @@
-font-face (300) {
+font-face {
   font-family: "Blogger sans light";
   src: url("../fonts/bloggersans-light.woff2") format("woff2"),url("../fonts/bloggersans-light.woff") format("woff");
   font-weight: 300;
@@ -6,15 +6,15 @@ font-face (300) {
   font-display: swap;
 }
 
-font-face (bold) {
-  font-family: "Blogger sans bold";
+font-face {
+  font-family: "Blogger-sans-bold";
   src: url("../fonts/bloggersans-bold.woff2") format("woff2"),url("../fonts/bloggersans-bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 
-font-face (normal) {
+font-face {
   font-family: "Blogger sans";
   src: url("../fonts/bloggersans.woff2") format("woff2"),
      url("../fonts/bloggersans.woff") format("woff");
@@ -23,7 +23,7 @@ font-face (normal) {
   font-display: swap;
 }
 
-font-face (500) {
+font-face {
   font-family: "Blogger sans medium";
   src: url("../fonts/bloggersans-medium.woff2") format("woff2"),
      url("../fonts/bloggersans-medium.woff") format("woff");
